--- a/web/index.html
+++ b/web/index.html
@@ -1,43 +1,52 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Token Counter (WASM)</title>
-    <style>
-        body {
-            font-family: system-ui, sans-serif;
-            max-width: 800px;
-            margin: 24px auto;
-            padding: 0 12px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 200px;
-        }
-
-        .row {
-            display: flex;
-            gap: 12px;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Count Tokens (Rust + WASM)</title>
+  <style>
+    :root { color-scheme: light dark; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; max-width: 900px; margin: 24px auto; padding: 0 12px; }
+    h1 { font-size: 1.5rem; margin: 0 0 12px; }
+    .row { display: flex; gap: 12px; align-items: center; flex-wrap: wrap; margin: 8px 0; }
+    label { font-weight: 600; }
+    select { padding: 4px 8px; }
+    textarea { width: 100%; height: 220px; padding: 10px; box-sizing: border-box; font: inherit; }
+    .muted { opacity: 0.7; }
+    pre { white-space: pre-wrap; word-wrap: break-word; background: color-mix(in oklab, Canvas 90%, CanvasText 5%); padding: 8px; border-radius: 6px; }
+    footer { margin-top: 24px; font-size: 0.9rem; }
+    .counter { font-size: 1.1rem; }
+  </style>
 </head>
-
 <body>
-    <h1>OpenAI-style Token Counter (Rust + WASM)</h1>
-    <div class="row"> <label>Encoding:</label> <select id="encoding">
-            <option value="cl100k_base" selected>cl100k_base (GPT-4, GPT-3.5)</option>
-            <option value="p50k_base">p50k_base (text-davinci, etc.)</option>
-            <option value="r50k_base">r50k_base / gpt2</option>
-        </select> <span id="status">Loading...</span> </div>
-    <p>Paste text below:</p> <textarea id="input" placeholder="Type or paste text here..."></textarea>
-    <p>Token count: <strong id="count">0</strong></p>
-    <pre id="ids" style="white-space: pre-wrap;"></pre>
-    <script type="module" src="./main.js"></script>
-</body>
+  <h1>OpenAI-style Token Counter</h1>
 
+  <div class="row">
+    <label for="encoding">Encoding:</label>
+    <select id="encoding">
+      <option value="cl100k_base" selected>cl100k_base</option>
+      <option value="o200k_base">o200k_base</option>
+      <option value="voyage3_base">voyage3_base</option>
+    </select>
+    <span id="status" class="muted">Loading...</span>
+  </div>
+
+  <p class="muted">Paste or type text below:</p>
+  <textarea id="input" placeholder="Type or paste text here…"></textarea>
+
+  <div class="row counter">
+    <span>Token count: <strong id="count">0</strong></span>
+  </div>
+
+  <details>
+    <summary>Show token IDs</summary>
+    <pre id="ids"></pre>
+  </details>
+
+  <noscript>
+    <p>Please enable JavaScript to use this tool.</p>
+  </noscript>
+
+  <script type="module" src="./main.js"></script>
+</body>
 </html>
