--- a/web/index.html
+++ b/web/index.html
@@ -11,10 +11,8 @@
     .row { display: flex; gap: 12px; align-items: center; flex-wrap: wrap; margin: 8px 0; }
     label { font-weight: 600; }
     select { padding: 4px 8px; }
-    textarea { width: 100%; height: 220px; padding: 10px; box-sizing: border-box; font: inherit; }
+    textarea { width: 100%; height: 240px; padding: 10px; box-sizing: border-box; font: inherit; }
     .muted { opacity: 0.7; }
-    pre { white-space: pre-wrap; word-wrap: break-word; background: color-mix(in oklab, Canvas 90%, CanvasText 5%); padding: 8px; border-radius: 6px; }
-    footer { margin-top: 24px; font-size: 0.9rem; }
     .counter { font-size: 1.1rem; }
   </style>
 </head>
@@ -28,7 +26,7 @@
       <option value="o200k_base">o200k_base</option>
       <option value="voyage3_base">voyage3_base</option>
     </select>
-    <span id="status" class="muted">Loading...</span>
+    <span id="status" class="muted">Loading…</span>
   </div>
 
   <p class="muted">Paste or type text below:</p>
@@ -37,11 +35,6 @@
   <div class="row counter">
     <span>Token count: <strong id="count">0</strong></span>
   </div>
-
-  <details>
-    <summary>Show token IDs</summary>
-    <pre id="ids"></pre>
-  </details>
 
   <noscript>
     <p>Please enable JavaScript to use this tool.</p>
